--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default">
 <head lang="pl">
-    <meta charset="UTF-8"/>
-    <title>Witaj w Thymeleaf!</title>
+    <!--<meta charset="UTF-8"/>-->
+    <title>Witaj w Twitterze!</title>
+    <!--<link href="/webjars/materializecss/0.96.0/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
 </head>
 <body>
-    <span th:text="${message}">Witaj w HTML!</span>
+    <div class="row" layout:fragment="content">
+
+        <h2 class="indigo-text center"
+            th:text="|Wyniki wyszukiwania ${search}|">Tweety</h2>
+        <ul class="collection">
+            <li class="collection-item avatar" th:each="tweet : ${tweets}">
+                <img th:src="${tweet.user.profileImageUrl}" alt="" class="circle"/>
+                <span class="title" th:text="${tweet.user.name}">Użytkownik</span>
+                <p th:text="${tweet.text}">Treść tweeta</p>
+            </li>
+        </ul>
+    </div>
+    <!--<span th:text="${message}">Witaj w HTML!</span>-->
+<!--<script src="/webjars/jquery/2.1.4/jquery.js"></script>-->
+<!--<script src="/webjars/materializecss/0.96.0/js/materialize.js"></script>-->
+
 </body>
 </html>
